# rag-chatbot

./: .gitignore  GEMINI.md  README.md
.github/: commit.instructions.md  (+2 more)
backend/: .env.example  =3.0.0  CHROMADB_README.md  EMBEDDING_README.md  ENCRYPTION_README.md  README.md  app.py  chromadb_example.py  chromadb_service.py  complete_integration_demo.py  config.py  embedding_integration_example.py  embeddings.py  init_db.py  models.py  persistence_service.py  pyproject.toml  requirements.txt  run.py  test_chromadb.py  test_chromadb_basic.py  test_embeddings.py  test_encryption.py  validate_embeddings.py  verify_chromadb.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/config/: config.py
backend/app/models/: models.py
backend/app/services/: chromadb_service.py  data_ingestion_service.py  embedding_service.py  persistence_service.py  text_correction_service.py  whisper_transcription_service.py  youtube_downloader_service.py
backend/docs/: COMPLETE_INTEGRATION_DEMO.md
backend/scripts/: chromadb_example.py  demonstrate_whisper_integration.py  generate_encryption_key.py  init_db.py  validate_embeddings.py  verify_chromadb.py
backend/tests/: test_chat.py  test_chromadb.py  test_chromadb_basic.py  test_data_ingestion.py  test_data_source_add.py  test_directory_structure.py  test_embeddings.py  test_encryption.py  test_health.py  test_history.py  test_settings.py  test_transcription_database_storage.py  test_upload.py  test_whisper_integration.py  test_whisper_transcription.py  test_youtube_downloader.py
(+3 files in other folders)
