[project]
name = "rag-chatbot-backend"
version = "1.0.0"
description = "Backend for RAG Chatbot application built with Flask"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.0",
    "python-dotenv==1.0.0",
    "Flask-CORS==4.0.0",
    "Flask-SQLAlchemy==3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]